--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
-		<title>vue-ts</title>
+		<title>SimplyRicks Portfolio</title>
 	</head>
 	<body>
 		<div id="app"></div>
