Layout update: change logo; Card update: calculated widths, redesigned styling; Added favicon; Added Monomaniac One Font

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<link
 			rel="icon"
-			type="image/svg+xml"
-			href="/vite.svg" />
+			type="image/x-icon"
+			href="/public/favicon.ico" />
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0" />
-		<title>SimplyRicks Portfolio</title>
+		<title>SimplyRick's Portfolio</title>
 	</head>
 	<body>
 		<div id="app"></div>
